k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quay-solver
  namespace: quay-solver
  labels:
    app.kubernetes.io/name: quay-solver
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: quay-solver
